# OpenHarmony_OpenCV

./: README.md
opencv/: BUILD.gn  README_OHOS_zh.md  build_cpp_from_cl.py  build_dispatched_file.py  bundle.json  opencv_common_cfg.gni  pre_header_file_copy.py
opencv/.pre_build/carotene/: functions.hpp  tegra_hal.hpp  types.hpp
opencv/.pre_build/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/cmake/: OpenCVModule.cmake
opencv/napi/: BUILD.gn  opencv_napi_cfg.gni
opencv/napi/common/log/include/: opencv_log_wrapper.h
opencv/napi/common/log/src/: opencv_log_wrapper.cpp
opencv/napi/interface/kits/js/: @ohos.opencv_core.d.ts  @ohos.opencv_imgcodecs.d.ts  @ohos.opencv_imgproc.d.ts  @ohos.opencv_objdetect.d.ts
opencv/napi/interface/kits/js/opencv/: core.d.ts  imgcodecs.d.ts  imgproc.d.ts  objdetect.d.ts  opencvMat.d.ts
opencv/napi/js/napi/include/: common.h  init.h  n_core.h  n_imgcodecs.h  n_imgproc.h  n_objdetect.h
opencv/napi/js/napi/src/: common.cpp  init.cpp
opencv/napi/js/napi/src/core/: n_bitwise_and.cpp  n_bitwise_not.cpp  n_bitwise_or.cpp  n_bitwise_xor.cpp  n_convertScaleAbs.cpp  n_copyMakeBorder.cpp  n_flip.cpp  n_hconcat.cpp  n_vconcat.cpp
opencv/napi/js/napi/src/imgcodecs/: n_imRead.cpp  n_imWrite.cpp
opencv/napi/js/napi/src/imgproc/: n_Canny.cpp  n_GaussianBlur.cpp  n_HoughLines.cpp  n_Laplacian.cpp  n_Scharr.cpp  n_Sobel.cpp  n_adaptiveThreshold.cpp  n_bilateralFilter.cpp  n_blur.cpp  n_boxFilter.cpp  n_circle.cpp  n_cvtColor.cpp  n_edgeDetect.cpp  n_ellipse.cpp  n_equalizeHist.cpp  n_fillPoly.cpp  n_filter2D.cpp  n_findContours.cpp  n_getDerivKernels.cpp  n_line.cpp  n_mat2pixel.cpp  n_medianBlur.cpp  n_putText.cpp  n_pyrDown.cpp  n_pyrUp.cpp  n_rectangle.cpp  n_resize.cpp  n_sqrBoxFilter.cpp  n_threshold.cpp  n_warpAffine.cpp  n_warpPolar.cpp
opencv/napi/js/napi/src/objdetect/: n_detectMultiScale.cpp  n_qrcode.cpp
opencv/samples/ohos_samples/opencv_app_sample/: build-profile.json5  oh-package.json5
opencv/samples/ohos_samples/opencv_app_sample/AppScope/: app.json5
opencv/samples/ohos_samples/opencv_app_sample/AppScope/resources/base/element/: string.json
opencv/samples/ohos_samples/opencv_app_sample/entry/: build-profile.json5  oh-package.json5
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/: module.json5
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/cpp/: CMakeLists.txt
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/cpp/common/: common.cpp  init.cpp
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/cpp/image_basic/: QRCode_identify.cpp  edgeDetection.cpp  faceDetect.cpp  image2Gray.cpp
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/cpp/include/: common.h  opencv_napi_api.h
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/cpp/types/libohos_opencv_sample/: oh-package.json5  opencv_sample.d.ts
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/ets/data/: CollectionCategory.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/ets/entryability/: EntryAbility.ts
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/ets/pages/: Index.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/ets/pages/image/: ImageData.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/ets/pages/image/basicSample/: edgeDetection.ets  faceDetect.ets  image2Gray.ets  qrcode.ets  qrcode_result_web.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/ets/pages/machineLearning/: MachineLearningData.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/ets/pages/video/: VideoData.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/resources/base/element/: string.json
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/resources/base/profile/: main_pages.json
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/resources/rawfile/: haarcascade_frontalface_alt.xml
opencv/samples/ohos_samples/opencv_app_sample/entry/src/main/resources/zh_CN/element/: string.json
opencv/samples/ohos_samples/opencv_app_sample/entry/src/ohosTest/ets/test/: Ability.test.ets  List.test.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/ohosTest/ets/testability/: TestAbility.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/ohosTest/ets/testability/pages/: Index.ets
opencv/samples/ohos_samples/opencv_app_sample/entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ts
opencv/samples/ohos_samples/opencv_app_sample/hvigor/: hvigor-config.json5
