# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/version.gni")
import("//build/ohos_var.gni")

opencv_lib_common_cflags_cc = [
    "-Wextra",
    "-mfloat-abi=softfp",
    "-mfpu=neon-vfpv4",
    #"-march=armv7-a",
    "-frtti",
    "-fexceptions",
    "-fPIC",
    "-std=c++11",
    "-fsigned-char",
    "-pthread",

    "-Wno-unused-function",
    "-Wno-unused-variable",
    "-Wno-sign-compare",
    "-Wno-missing-field-initializers",
    "-Wno-unused-parameter",
    "-Wno-sometimes-uninitialized",
    "-Wno-header-hygiene",
    "-Wno-delete-non-virtual-dtor",
    "-Wno-unnamed-type-template-args",
    "-Wno-comment",
    "-Wno-deprecated-enum-enum-conversion",
    "-Wno-deprecated-anon-enum-enum-conversion",
    "-Wno-string-conversion",
    "-fdata-sections",
    "-Wno-psabi",
    "-Wno-unknown-warning-option",
    "-Wno-implicit-fallthrough",
]

opencv_exe_common_cflags_cc = [
    "-Wextra",
    "-mfloat-abi=softfp",
    "-mfpu=neon-vfpv4",
    "-march=armv7-a",
    "-frtti",
    "-fexceptions",
    "-fPIE",
    "-std=c++11",
    "-fsigned-char",
    "-pthread",

    "-Wno-unused-function",
    "-Wno-unused-variable",
    "-Wno-sign-compare",
    "-Wno-missing-field-initializers",
    "-Wno-unused-parameter",
    "-Wno-sometimes-uninitialized",
    "-Wno-header-hygiene",
    "-Wno-delete-non-virtual-dtor",
    "-Wno-unnamed-type-template-args",
    "-Wno-comment",
    "-Wno-deprecated-enum-enum-conversion",
    "-Wno-deprecated-anon-enum-enum-conversion",
    "-Wno-string-conversion",
    "-fdata-sections",
    "-Wno-psabi",
    "-Wno-unknown-warning-option",
    "-Wno-implicit-fallthrough",
]

opencv_lib_common_defines = [
    "__OPENCV_BUILD=1",
    "CVAPI_EXPORTS",
    "_USE_MATH_DEFINES",
    "__STDC_CONSTANT_MACROS",
    "__STDC_FORMAT_MACROS",
    "__STDC_LIMIT_MACROS",
    "OPENCV_ALLOCATOR_STATS_COUNTER_TYPE=int",
    "OPENCV_WITH_ITT=1",
    "__ARM_NEON__",
]

opencv_exe_common_defines = [
    "__OPENCV_BUILD=1",
    "_USE_MATH_DEFINES",
    "__STDC_CONSTANT_MACROS",
    "__STDC_FORMAT_MACROS",
    "__STDC_LIMIT_MACROS",
    "__OPENCV_TESTS=1",
    "OPENCV_ALLOCATOR_STATS_COUNTER_TYPE=int",
    "OPENCV_WITH_ITT=1",
    "__ARM_NEON__",
]



